--- a/week-01/day-3-functions+CSS/dusk-modular-css/starter_code/main.css
+++ b/week-01/day-3-functions+CSS/dusk-modular-css/starter_code/main.css
@@ -6,3 +6,7 @@
 }
 .block-children > * { display: block;}
 .inline-block-children > * { display: inline-block; }
+
+.shout {
+  text-transform: uppercase;
+}
